--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "redux": "^3.0.4",
     "redux-form": "^6.8.0",
     "redux-promise": "^0.5.3",
-    "webpack": "^1.12.9",
+    "webpack": "^1.12.9"
   }
 }
