--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^0.14.7",
-    "webpack": "^1.12.9",
+    "webpack": "^1.15.0",
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
@@ -38,7 +38,6 @@
     "react-router-dom": "^4.0.0",
     "redux": "^3.0.4",
     "redux-form": "^6.8.0",
-    "redux-promise": "^0.5.3",
-    "webpack": "^1.12.9"
+    "redux-promise": "^0.5.3"
   }
 }
