--- a/package.json
+++ b/package.json
@@ -23,15 +23,7 @@
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^0.14.7",
     "webpack": "^1.15.0",
-    "webpack-dev-server": "^1.14.0",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-redux": "4.3.0",
-    "react-router": "^2.0.1",
-    "react-router-dom": "^4.0.0",
-    "redux": "^3.0.4",
-    "redux-form": "^6.8.0",
-    "redux-promise": "^0.5.3"
+    "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
     "axios": "^0.16.2",
