--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "lodash": "^3.10.1",
-    "react": "^0.14.3",
+    "react": "^0.14.9",
     "react-dom": "^0.14.3",
     "react-redux": "4.3.0",
     "react-router": "^2.0.1",
     "react-router-dom": "^4.0.0",
     "redux": "^3.0.4",
-    "webpack": "^1.15.0",
     "redux-form": "^6.8.0",
-    "redux-promise": "^0.5.3"
+    "redux-promise": "^0.5.3",
+    "webpack": "^1.15.0"
   }
 }
