added build and deploy depenancies

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
     "test:watch": "npm run test -- --watch",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "build": "react-scripts build",
     "postinstall": "webpack --config ./webpack.config.js"
   },
   "author": "",
